# network-operations

./: .ansible-lint  .gitignore  .mcp.json  .pr_agent.toml  .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  engineering-loop-policy.yml  model-policy.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
ansible/: ansible.cfg
autoinstall/: README.md  debian-cloud-init.yaml.j2  debian-network-config.yaml.j2  openbsd-cloud-init.yaml.j2  openbsd-fw.conf  openbsd-mail.conf  qmp-keys.py  qmp-screenshot.py
configs/: 0.5.b.0.1.4.6.b.c.0.a.2.ip6.arpa.zone  0.5.b.1.4.6.b.c.0.a.2.ip6.arpa.zone  0.5.b.1.4.6.b.c.0.a.2.ip6.arpa.zone.j2  Caddyfile  Caddyfile.j2  as215932.net.zone  as215932.net.zone.j2  bird.conf.j2  caddy.service  deploy.hyrule.host.zone  deploy.servify.network.zone  deploy.servify.network.zone.j2  dns.check.hyrule.host.zone  frr-policy-intent.yml  hyrule-cloud-monero-restore-wallet  hyrule-cloud-worker.service  hyrule-cloud.env.j2  hyrule-cloud.service  hyrule-mcp-hosts.yml.j2  hyrule-mcp.env.j2  hyrule-mcp.service  hyrule-web.env.j2  hyrule-web.service  hyrule.host.zone  knot.conf.j2  monero-wallet-rpc.service  monero.env.j2  noc-agent-bot.service  noc-agent-google-wif.json.j2  noc-agent.env.j2  noc-agent.service  pf.conf.j2  servify.network.zone  servify.network.zone.j2  xo-mcp-package.json
docs/: agentic-development-loop.md  ansible.md  application-logging.md  autonomous-noc-remediation-execution.md  autonomous-noc.md  deployment.md  extmon.md  network-flows.md  reverse-dns.md  rtr-vrf.md  soju.md  (+3 more)
(+814 files in other folders)
