[project]
name = "hyrule-engineering-loop"
version = "0.1.0"
description = "Runnable LangGraph skeleton for the Hyrule Engineering Loop"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.70",
    "pydantic>=2.10",
    "pyyaml>=6.0",
]

[project.scripts]
hyrule-engineering-loop = "hyrule_engineering_loop.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyrule_engineering_loop"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
